--- a/source/index.html
+++ b/source/index.html
@@ -9,9 +9,11 @@
 		<a class="page-header__logo">
       		<img class="page-header__logo-image" src="img/logotype-white-mobile-svg.svg" width="75" height="22" alt="Логотип «PINK»">
   		</a>
-  		<a class="page-header__close">
-  			<img class="page-header__close-image" src="img/menu-cross-svg.svg" width="24" height="23" alt="Иконка закрытия">
-  		</a>
+  		<button class="btn-header__close">
+  			<svg xmlns="http://www.w3.org/2000/svg" width="23.867" height="23.867" class="icon icon-btn" version="1" viewBox="0 0 23.867 23.867">
+    		<path fill="#FFF" d="M15.087 11.933l8.56-8.559a.75.75 0 0 0 0-1.061L21.554.22a.747.747 0 0 0-1.06 0l-8.561 8.56L3.373.22a.771.771 0 0 0-1.061 0L.22 2.313a.75.75 0 0 0 0 1.061l8.56 8.559-8.56 8.559a.751.751 0 0 0 0 1.062l2.093 2.094a.744.744 0 0 0 1.06 0l8.561-8.56 8.56 8.56a.746.746 0 0 0 1.06 0l2.093-2.094a.751.751 0 0 0 0-1.062l-8.56-8.559z"/>
+			</svg>
+  		</button>
   		<nav class="main-nav">
   			<div class="main-nav__wrapper">
   				<ul class="main-nav__list site-list">
@@ -53,18 +55,18 @@
 				<p class="description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
 				</p>
     		</section>
-    		<section class="fishka">
-    			<header class="fishka__header">
+    		<section class="advantages">
+    			<header class="advantages__header">
     				<h2 class="visually-hidden">Преимущества</h2>
-    				<p class="fishka__header--heading">Устали от серости<br> мегаполиса?
+    				<p class="advantages__header--heading">Устали от серости<br> мегаполиса?
 					Нам есть, что вам<br> предложить!</p>
-					<b class="fishka__mood">Поднимает настроение</b>
-					<p class="fishka__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-					<b class="fishka__mood">Меняет мир вокруг</b>
-					<p class="fishka__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-					<b class="fishka__mood">Заводит новых друзей</b>
-					<p class="fishka__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-					<p class="fishka__iphone">
+					<b class="advantages__mood">Поднимает настроение</b>
+					<p class="advantages__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+					<b class="advantages__mood">Меняет мир вокруг</b>
+					<p class="advantages__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+					<b class="advantages__mood">Заводит новых друзей</b>
+					<p class="advantages__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+					<p class="advantages__iphone">
 					<img src="img/iphone-screen-3.png">
 					</p>
 
