--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
   			<svg xmlns="http://www.w3.org/2000/svg" width="23.867" height="23.867" class="icon icon-btn" version="1" viewBox="0 0 23.867 23.867">
     		<path fill="#FFF" d="M15.087 11.933l8.56-8.559a.75.75 0 0 0 0-1.061L21.554.22a.747.747 0 0 0-1.06 0l-8.561 8.56L3.373.22a.771.771 0 0 0-1.061 0L.22 2.313a.75.75 0 0 0 0 1.061l8.56 8.559-8.56 8.559a.751.751 0 0 0 0 1.062l2.093 2.094a.744.744 0 0 0 1.06 0l8.561-8.56 8.56 8.56a.746.746 0 0 0 1.06 0l2.093-2.094a.751.751 0 0 0 0-1.062l-8.56-8.559z"/>
 			</svg>
-  		</button>
+  		</button>	
   		<nav class="main-nav">
   			<div class="main-nav__wrapper">
   				<ul class="main-nav__list site-list">
@@ -42,13 +42,13 @@
     		<button class="btn">Скачать приложение</button>
     		<section class="applications-page">
 				<h2 class="visually-hidden">Приложения</h2>
-				<a class applications-page__apple>
+				<a class="applications-page applications-page--apple">
 					<img class="applications-page__apple" src="img/apple-logo-svg.svg" width="47" height="56" alt="Логотип apple">
 				</a>
-				<a class applications-page__android>
+				<a class="applications-page applications-page--android">
 					<img class="applications-page__android" src="img/android-logo-svg.svg" width="43" height="47" alt="Логотип android">
 				</a>
-				<a class applications-page__microsoft>
+				<a class="applications-page applications-page--microsoft">
 					<img class="applications-page__microsoft" src="img/microsoft-logo-svg.svg" width="44" height="41" alt="Логотип microsoft">
 				</a>
 				<h2 class="visually-hidden">Описание</h2>
