--- a/source/photo.html
+++ b/source/photo.html
@@ -17,8 +17,8 @@
 		</button>
 			<section class="gallery-page gallery-page--all">
 				<div class="gallery-page gallery-page--users">
-					<img src="img/back-mobile-jpg.png" width="320" height="462" alt="Затемненное фото старинного замка">
-				</div>
+					<img src="img/back-mobile-jpg.pngig" width="320" height="462" alt="Затемненное фото старинного замка">
+		 		</div>
 				<div class="gallery-page gallery-page--text">
 					<p class="gallery-page gallery-page__text--content">
 						Взгляните на фотографии, которые выкладывают пользователи!<br>
