--- a/source/form.html
+++ b/source/form.html
@@ -35,6 +35,48 @@
         <h2 class="visually-hidden">Конкурс</h2>
         <div class="contest">Конкурс на самое безбашенное путешествие с Пинк
         </div>
+
+      ========================================================
+
+		<section class="phorm-2">
+			<p class="phorm-2__text">
+				Поделитесь своей историей и получите<br> шанс выиграть ценный приз — 1000<br>миль на вашу бонусную карту! Пожалуйста, заполните форму ниже:
+			</p>
+			<section class="form-modal">
+		    	<form action="https://echo.htmlacademy.ru" method="post">
+		    		<p><label for="name">Фамилия:<br></label>
+		    			<input type="text" required="" autofocus="" value="Укажите фамилию *">
+		    			    </p>
+		    			    <p><label for="name">Имя:<br></label>
+		    			<input type="text" required="" autofocus="" value="Введите ваше имя*">
+		    			    </p>
+		    			     <p><label for="name">Отчество:<br></label>
+		    			<input type="text" required="" autofocus="" value="Ну и отчество тоже*">
+		    			    </p>
+		    	</form>
+			</section>
+			<section class="checkbox">
+				<h2 class="checkbox__text">Ваши безбашенные<br> достижения в путешествии</h2>
+				<input type="checkbox" name="selfy" checked>
+				<label for="name">Сделал селфи с акулой</label><br>
+				<input type="checkbox" name="selfy" checked>
+				<label for="name">Обгорел на пляже</label><br>
+				<input type="checkbox" name="selfy">
+				<label for="name">Видел Чака Норриса</label><br>
+				<input type="checkbox" name="selfy">
+				<label for="name">Накупил сувениров</label><br>
+				<input type="checkbox" name="selfy" checked>
+				<label for="name">Удержал башню</label><br>
+				<input type="checkbox" name="selfy">
+				<label for="name">Разгромил отель</label><br>
+
+
+
+
+
+			</section>
+
+
 	   <!--  ==================здесь будет контент============== -->
 	   <footer class="page-footer">
 	   		<a class="page-footer__logo">
