добавляет style.css в less

--- a/source/photo.html
+++ b/source/photo.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
 	<title>photo</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
 		</button>
 			<section class="gallery-page gallery-page--all">
 				<div class="gallery-page gallery-page--users">
-					<img src="img/back-mobile-jpg.pngig" width="320" height="462" alt="Затемненное фото старинного замка">
+					<img src="img/back-mobile-jpg.png" width="320" height="462" alt="Затемненное фото старинного замка">
 		 		</div>
 				<div class="gallery-page gallery-page--text">
 					<p class="gallery-page gallery-page__text--content">
