--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
   <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
     <title>HTML Academy: Пинк</title>
   </head>
   <body>
