--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
   <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style.css">
-    <title>HTML Academy: Пинк</title>
+    <title>Пинк</title>
   </head>
   <body>
 	<header class="page-header">
