--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,7 @@
     			<img class="page-main__iphone" src="img/iphone-5-in-hand-png.png" width="320" height="314"
     			alt="Фото айфона в руке">
     		</a>
-    		<button class="btn">Скачать приложение</button>
+    		<button class="btn__iphone">Скачать приложение</button>
     		<section class="applications-page">
 				<h2 class="visually-hidden">Приложения</h2>
 				<a class="applications-page applications-page--apple">
@@ -52,10 +52,11 @@
 				<a class="applications-page applications-page--microsoft">
 					<img class="applications-page__microsoft" src="img/microsoft-logo-svg.svg" width="44" height="41" alt="Логотип microsoft">
 				</a>
+			</section>
 				<h2 class="visually-hidden">Описание</h2>
 				<p class="description">Доступно для iPhone, iPad, Android,<br> Windows Phone, OS X, Windows 8
 				</p>
-    		</section>
+    		
     		<section class="advantages">
     			<header class="advantages__header">
     				<h2 class="visually-hidden">Преимущества</h2>
