--- a/source/index.html
+++ b/source/index.html
@@ -10,13 +10,19 @@
   <body>
 	<header class="page-header">
 		<a class="page-header__logo">
-      		<img class="page-header__logo-image" src="img/logotype-white-mobile-svg.svg" width="75" height="22" alt="Логотип «PINK»">
-  		</a>
-  		<button class="btn-header__close">
+      		<img class="page-header page-header__logo_image" src="img/logotype-white-mobile-svg.svg" width="75" height="22" alt="Логотип «PINK»">
+		</a>
+		<button class="page-header__burger-menu">
+			<svg xmlns="http://www.w3.org/2000/svg" width="49.945" height="24.007" class="icon icon-burger" version="1" viewBox="0 0 49.945 24.007">
+				<path fill="#FFF" d="M1.137 0C.51 0 0 .428 0 1.01v1.981c0 .558.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01V1.01c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.003c-.627 0-1.137.428-1.137 1.01v1.98c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.98c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.002C.51 20.005 0 20.434 0 21.016v1.981c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.981c0-.558-.494-1.011-1.138-1.011H1.137z"/>
+				<path fill="#FFF" d="M1.137 0C.51 0 0 .428 0 1.01v1.981c0 .558.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01V1.01c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.003c-.627 0-1.137.428-1.137 1.01v1.98c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.98c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.002C.51 20.005 0 20.434 0 21.016v1.981c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.981c0-.558-.494-1.011-1.138-1.011H1.137z"/>
+			</svg>
+		</button>
+  		<!-- <button class="btn-header__close">
   			<svg xmlns="http://www.w3.org/2000/svg" width="23.867" height="23.867" class="icon icon-btn" version="1" viewBox="0 0 23.867 23.867">
     		  <path fill="#FFF" d="M15.087 11.933l8.56-8.559a.75.75 0 0 0 0-1.061L21.554.22a.747.747 0 0 0-1.06 0l-8.561 8.56L3.373.22a.771.771 0 0 0-1.061 0L.22 2.313a.75.75 0 0 0 0 1.061l8.56 8.559-8.56 8.559a.751.751 0 0 0 0 1.062l2.093 2.094a.744.744 0 0 0 1.06 0l8.561-8.56 8.56 8.56a.746.746 0 0 0 1.06 0l2.093-2.094a.751.751 0 0 0 0-1.062l-8.56-8.559z"/>
 			</svg>
-  		</button>	
+  		</button>	 -->
   		<nav class="main-nav">
   			<div class="main-nav__wrapper">
   				<ul class="main-nav__list site-list">
