--- a/source/index.html
+++ b/source/index.html
@@ -30,10 +30,10 @@
             			<a>Главная</a>
           			</li>
           			<li class="site-list__item">
-            			<a href="photo.html">Фотографии</a>
+            			<a href="#">Фотографии</a>
           			</li>
           			<li class="site-list__item">
-            			<a href="concurs.html">Конкурс</a>
+            			<a href="#">Конкурс</a>
           			</li>
           			<li class="site-list__item">
             			<a href="#">HTML ACADEMY</a>
@@ -43,7 +43,7 @@
         </nav>
     </header>
     <main class="page-main">
-    	<h2 class="visually-hidden">Взгляните на жизнь иначе!</h2>
+    	<h2 class="page-main__name">Взгляните на жизнь<br> иначе!</h2>
     		<a class="page-main__iphone">
     			<img class="page-main__iphone" src="img/iphone-5-in-hand-png.png" width="320" height="314"
     			alt="Фото айфона в руке">
@@ -51,14 +51,14 @@
     		<button class="btn__iphone">Скачать приложение</button>
     		<section class="applications-page">
 				<h2 class="visually-hidden">Приложения</h2>
-				<a class="applications-page applications-page--apple">
-					<img class="applications-page__apple" src="img/apple-logo-svg.svg" width="47" height="56" alt="Логотип apple">
+				<a class="applications-page applications-page_apple">
+					<img class="applications-page_apple" src="img/apple-logo-svg.svg" width="47" height="56" alt="Логотип apple">
 				</a>
-				<a class="applications-page applications-page--android">
-					<img class="applications-page__android" src="img/android-logo-svg.svg" width="43" height="47" alt="Логотип android">
+				<a class="applications-page applications-page_android">
+					<img class="applications-page_android" src="img/android-logo-svg.svg" width="43" height="47" alt="Логотип android">
 				</a>
-				<a class="applications-page applications-page--microsoft">
-					<img class="applications-page__microsoft" src="img/microsoft-logo-svg.svg" width="44" height="41" alt="Логотип microsoft">
+				<a class="applications-page applications-page_microsoft">
+					<img class="applications-page_microsoft" src="img/microsoft-logo-svg.svg" width="44" height="41" alt="Логотип microsoft">
 				</a>
 			</section>
 				<h2 class="visually-hidden">Описание</h2>
