--- a/source/index.html
+++ b/source/index.html
@@ -12,10 +12,10 @@
 		<a class="page-header__logo">
       		<img class="page-header page-header__logo_image" src="img/logotype-white-mobile-svg.svg" width="75" height="22" alt="Логотип «PINK»">
 		</a>
-		<button class="page-header__burger-menu">
-			<svg xmlns="http://www.w3.org/2000/svg" width="49.945" height="24.007" class="icon icon-burger" version="1" viewBox="0 0 49.945 24.007">
+		<button class="burger-menu">
+			<svg xmlns="http://www.w3.org/2000/svg" width="50" height="24" class="icon icon-burger" version="1" viewBox="0 0 49.945 24.007">
 				<path fill="#FFF" d="M1.137 0C.51 0 0 .428 0 1.01v1.981c0 .558.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01V1.01c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.003c-.627 0-1.137.428-1.137 1.01v1.98c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.98c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.002C.51 20.005 0 20.434 0 21.016v1.981c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.981c0-.558-.494-1.011-1.138-1.011H1.137z"/>
-				<path fill="#FFF" d="M1.137 0C.51 0 0 .428 0 1.01v1.981c0 .558.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01V1.01c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.003c-.627 0-1.137.428-1.137 1.01v1.98c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.98c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.002C.51 20.005 0 20.434 0 21.016v1.981c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.981c0-.558-.494-1.011-1.138-1.011H1.137z"/>
+				
 			</svg>
 		</button>
   		<!-- <button class="btn-header__close">
