добавляет правки в index.html

--- a/source/index.html
+++ b/source/index.html
@@ -86,6 +86,7 @@
 						<b class="advantages__mood">Заводит новых друзей</b>
 						<p class="advantages__description">Ставьте лайки, комментируйте,<br> делитесь фотографиями с друзьями и<br> заводите новых</p>
 						<p class="advantages__iphone">
+							<img src="img/iphone-screen-3.png"></p>
 					</div>
 				</section>
 				<section class="reviews">
