--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
   <body>
 	<header class="page-header">
 		<a class="page-header__logo">
-				<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" class="icon icon-mobile" width="75px" height="22px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
+				<svg class="page-header__logo_mobile"  width="75px" height="22px" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"  viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
 					<g>
 					  <path fill="#FFFFFF" d="M0,1.449c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.147v0.064 c0,4.861-4.057,7.373-8.854,7.373H2.544v6.825c0,0.708-0.58,1.288-1.288,1.288C0.58,22.859,0,22.279,0,21.571V1.449z M8.114,12.428 c3.734,0,6.182-1.996,6.182-4.958V7.405c0-3.22-2.415-4.894-6.054-4.894H2.544v9.917H8.114z"/>
 					  <path fill="#FFFFFF" d="M21.729,1.288C21.729,0.58,22.308,0,22.983,0c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.288-1.288,1.288c-0.676,0-1.255-0.58-1.255-1.288V1.288z"/>
@@ -18,16 +18,15 @@
 					  <path fill="#FFFFFF" d="M56.3,1.288C56.3,0.58,56.879,0,57.556,0c0.708,0,1.287,0.58,1.287,1.288v12.331L71.689,0.451 C71.979,0.193,72.269,0,72.688,0c0.676,0,1.224,0.612,1.224,1.256c0,0.354-0.161,0.644-0.419,0.901l-7.984,7.92l8.564,10.561 c0.225,0.29,0.354,0.547,0.354,0.934c0,0.676-0.579,1.288-1.287,1.288c-0.483,0-0.806-0.258-1.03-0.58l-8.403-10.463l-4.862,4.861 v4.894c0,0.708-0.579,1.288-1.287,1.288c-0.677,0-1.256-0.58-1.256-1.288V1.288z"/>
 					</g>
 				</svg>
-		</a>
-		<a class="page-header__logo_2">
-				<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tablet" width="147px" height="40px" viewBox="0 0 146.3 40.375">
+		
+		
+				<svg class="page-header__logo_tablet"  width="147px" height="40px" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 146.3 40.375">
 					<g fill="#FFF">
 						<path d="M71.874 18.661c0-.708.58-1.288 1.256-1.288h7.18c5.087 0 8.436 2.704 8.436 7.146v.064c0 4.861-4.057 7.373-8.854 7.373h-5.475v6.825c0 .708-.58 1.288-1.288 1.288-.676 0-1.256-.58-1.256-1.288v-20.12zm8.114 10.98c3.734 0 6.182-1.996 6.182-4.959v-.063c0-3.22-2.414-4.894-6.053-4.894h-5.699v9.917h5.57v-.001zM93.603 18.5c0-.708.579-1.288 1.255-1.288.709 0 1.288.58 1.288 1.288v20.283a1.29 1.29 0 0 1-1.288 1.287c-.676 0-1.255-.579-1.255-1.287V18.5zM102.744 18.532c0-.676.58-1.256 1.256-1.256h.354c.58 0 .935.29 1.288.74l13.684 17.45V18.468c0-.676.547-1.256 1.256-1.256.676 0 1.224.58 1.224 1.256v20.349c0 .676-.481 1.19-1.158 1.19h-.129c-.548 0-.935-.321-1.319-.772l-13.975-17.868v17.45c0 .676-.547 1.256-1.256 1.256-.676 0-1.223-.58-1.223-1.256V18.532h-.002zM128.173 18.5c0-.708.58-1.288 1.257-1.288.708 0 1.286.58 1.286 1.288v12.331l12.848-13.168c.29-.257.579-.451.998-.451.676 0 1.225.612 1.225 1.256 0 .354-.162.644-.42.901l-7.984 7.92 8.564 10.561c.225.291.354.547.354.935 0 .676-.578 1.288-1.286 1.288-.483 0-.806-.258-1.03-.58l-8.402-10.463-4.863 4.861v4.894a1.29 1.29 0 0 1-1.286 1.288c-.677 0-1.257-.58-1.257-1.288V18.5h-.004z"/>
 					</g>
 					<path fill="#FFF" d="M60.462 28.016L55.287 6.651C54.926 4.303 52.694 0 46.688 0a1.5 1.5 0 1 0 0 3c4.856 0 5.575 3.729 5.639 4.143l4.767 19.701h-2.073c-.742-5.927-5.802-10.531-11.927-10.531s-11.186 4.604-11.927 10.531h-1.82c-.741-5.927-5.802-10.531-11.927-10.531S6.235 20.917 5.493 26.844H3.42L8.187 7.143C8.25 6.729 8.97 3 13.826 3a1.5 1.5 0 1 0 0-3C7.82 0 5.588 4.303 5.227 6.651L.052 28.016c-.266 1.109.531 1.826 1.426 1.826.012 0 .023.004.036.004h3.982c.741 5.926 5.802 10.53 11.927 10.53s11.185-4.604 11.927-10.53h1.814c.742 5.926 5.802 10.53 11.927 10.53s11.186-4.604 11.927-10.53H59c.012 0 .023-.004.036-.004.895 0 1.692-.717 1.426-1.826zm-34.147 1.828c-.715 4.272-4.421 7.531-8.896 7.531-4.475 0-8.18-3.259-8.896-7.531-.082-.488-.135-.988-.135-1.5s.053-1.011.135-1.5c.715-4.271 4.421-7.531 8.896-7.531 4.475 0 8.18 3.26 8.896 7.531.082.489.135.988.135 1.5s-.053 1.011-.135 1.5zm25.675 0c-.716 4.272-4.421 7.531-8.896 7.531-4.475 0-8.181-3.259-8.896-7.531-.082-.488-.135-.988-.135-1.5s.053-1.011.135-1.5c.716-4.271 4.421-7.531 8.896-7.531 4.475 0 8.181 3.26 8.896 7.531.082.489.135.988.135 1.5s-.053 1.011-.135 1.5z"/>
-				</svg>
-		</a>		  
-
+				</svg>		  
+		</a>
       <!--		<img class="page-header page-header__logo_image" src="img/logotype-white-mobile-svg.svg" width="75" height="22" alt="Логотип «PINK»">-->
 		
 	<!--	<button class="burger-menu">
@@ -36,8 +35,8 @@
 				
 			</svg>
 		</button>-->
-  		<button class="btn-header__close">
-  			<svg xmlns="http://www.w3.org/2000/svg" class="icon btn-icon" width="24" height="24" version="1" viewBox="0 0 23.867 23.867">
+  		<button class="page-header__close">
+  			<svg class="page-header__close-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" version="1" viewBox="0 0 23.867 23.867">
     		  <path fill="#FFF" d="M15.087 11.933l8.56-8.559a.75.75 0 0 0 0-1.061L21.554.22a.747.747 0 0 0-1.06 0l-8.561 8.56L3.373.22a.771.771 0 0 0-1.061 0L.22 2.313a.75.75 0 0 0 0 1.061l8.56 8.559-8.56 8.559a.751.751 0 0 0 0 1.062l2.093 2.094a.744.744 0 0 0 1.06 0l8.561-8.56 8.56 8.56a.746.746 0 0 0 1.06 0l2.093-2.094a.751.751 0 0 0 0-1.062l-8.56-8.559z"/>
 			</svg>
 		</button>
@@ -45,27 +44,25 @@
   			<div class="main-nav__wrapper">
   				<ul class="main-nav__list site-list">
           			<li class="site-list__item">
-            			<a>Главная</a>
+            			<a class="site-list__link">Главная</a>
           			</li>
           			<li class="site-list__item">
-            			<a href="#">Фотографии</a>
+            			<a href="#" class="site-list__link">Фотографии</a>
           			</li>
           			<li class="site-list__item">
-            			<a href="#">Конкурс</a>
+            			<a href="#" class="site-list__link">Конкурс</a>
           			</li>
           			<li class="site-list__item">
-            			<a href="#">HTML ACADEMY</a>
+            			<a href="#" class="site-list__link">HTML ACADEMY</a>
           			</li>
         		</ul>
         	</div>
         </nav>
     </header>
     <main class="page-main">
+		<div class="page-main__example">
     	<h2 class="page-main__name">Взгляните на жизнь<br> иначе!</h2>
-    		<a class="page-main__iphone">
-    			<img class="page-main__iphone" src="img/iphone-5-in-hand-png.png" width="320" height="314"
-    			alt="Фото айфона в руке">
-    		</a>
+    		
     		<button class="btn__iphone">Скачать приложение</button>
     		<section class="applications-page">
 				<h2 class="visually-hidden">Приложения</h2>
@@ -82,6 +79,7 @@
 				<h2 class="visually-hidden">Описание</h2>
 				<p class="description">Доступно для iPhone, iPad, Android,<br> Windows Phone, OS X, Windows 8
 				</p>
+				</div>
     			<section class="advantages">
     				<div class="advantages__container">
     					<h2 class="visually-hidden">Преимущества</h2>
