--- a/source/index.html
+++ b/source/index.html
@@ -96,14 +96,15 @@
     			<section class="advantages">
     				<div class="advantages__container">
     					<h2 class="visually-hidden">Преимущества</h2>
-    					<p class="advantages__header">Устали от серости<br> мегаполиса?
-						Нам есть, что вам<br> предложить!</p>
-						<b class="advantages__mood">Поднимает настроение</b>
-						<p class="advantages__description">Приложение позволит вам победить<br> осеннюю хандру и депрессию<br> буквально в несколько кликов!</p>
-						<b class="advantages__mood">Меняет мир вокруг</b>
-						<p class="advantages__description">Сделайте снимок и украсьте его<br> смайликом или текстовой подписью,<br> чтобы усилить эффект</p>
-						<b class="advantages__mood">Заводит новых друзей</b>
-						<p class="advantages__description">Ставьте лайки, комментируйте,<br> делитесь фотографиями с друзьями и<br> заводите новых</p>
+    					<ul class="advantages__header">Устали от серости<br> мегаполиса?
+						Нам есть, что вам<br> предложить!
+							<li class="advantages__mood">Поднимает настроение</li>
+							<li class="advantages__description">Приложение позволит вам победить<br> осеннюю хандру и депрессию<br> буквально в несколько кликов!</li>
+							<li class="advantages__mood">Меняет мир вокруг</li>
+							<li class="advantages__description">Сделайте снимок и украсьте его<br> смайликом или текстовой подписью,<br> чтобы усилить эффект</li>
+							<li class="advantages__mood">Заводит новых друзей</li>
+							<li class="advantages__description">Ставьте лайки, комментируйте,<br> делитесь фотографиями с друзьями и<br> заводите новых</li>
+						</ul>
 						<p class="advantages__iphone">
 							<img src="img/iphone-screen-3.png"></p>
 					</div>
