--- a/source/index.html
+++ b/source/index.html
@@ -105,8 +105,8 @@
 							<li class="advantages__mood">Заводит новых друзей</li>
 							<li class="advantages__description">Ставьте лайки, комментируйте,<br> делитесь фотографиями с друзьями и<br> заводите новых</li>
 						</ul>
-						<p class="advantages__iphone">
-							<img src="img/iphone-screen-3.png"></p>
+						<a class="advantages__iphone"></a>
+							<!-- <img src="img/iphone-screen-3.png"></a> -->
 					</div>
 				</section>
 				<section class="reviews">
