--- a/source/index.html
+++ b/source/index.html
@@ -105,8 +105,8 @@
 							<li class="advantages__mood">Заводит новых друзей</li>
 							<li class="advantages__description">Ставьте лайки, комментируйте,<br> делитесь фотографиями с друзьями и<br> заводите новых</li>
 						</ul>
-						<a class="advantages__iphone"></a>
-							<!-- <img src="img/iphone-screen-3.png"></a> -->
+						<a class="advantages__iphone">
+							<img src="img/iphone-screen-3-tablet@1x.png" width="268px" height="547px"></a> 
 					</div>
 				</section>
 				<section class="reviews">
