--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap" rel="stylesheet">
     <title>Пинк</title>
@@ -106,7 +107,11 @@
 							<li class="advantages__description">Ставьте лайки, комментируйте,<br> делитесь фотографиями с друзьями и<br> заводите новых</li>
 						</ul>
 						<a class="advantages__iphone">
-							<img src="img/iphone-screen-3-tablet@1x.png" width="268px" height="547px"></a> 
+							<img src="img/iphone-screen-3.png">
+						</a>
+						<a class="advantages__iphone-tablet">
+							<img src="img/iphone-screen-3-tablet@1x.png" width="268px" height="547px">
+						</a>
 					</div>
 				</section>
 				<section class="reviews">
