--- a/source/index.html
+++ b/source/index.html
@@ -116,7 +116,15 @@
 				</section>
 				<section class="reviews">
 					<h2 class="visually-hidden">Отзывы о нас</h2>
-						<div class="reviews__wrapper slider">
+						<div class="reviews__wrapper">
+							<h2 class="reviews__title">Николай Петров</h2>
+      						<div class="reviews__list"> 
+								<blockquote class="reviews__item  slider__item">
+									<cite class="reviews__author-name">Николай Петров</cite>
+									<p class="reviews__text">«Это приложение перевернуло мой мир<br> и позволило по-новому взглянуть на<br> привычные серые вещи! А еще я<br> познакомился со своей будущей женой<br> в комментариях к выложенной<br> фотографии!»</p>
+								</blockquote>
+							  </div>
+						<!-- <div class="reviews__wrapper slider">
 							<blockquote class="reviews__item  slider__item">
 								<cite class="reviews__author-name">Николай Петров</cite>
 								<p class="reviews__text">«Это приложение перевернуло мой мир<br> и позволило по-новому взглянуть на<br> привычные серые вещи! А еще я<br> познакомился со своей будущей женой<br> в комментариях к выложенной<br> фотографии!»</p>
@@ -126,7 +134,8 @@
 							<button class="slider__toggle" type="button"></button>
 							<button class="slider__toggle" type="button"></button>
 							<button class="slider__toggle" type="button"></button>
-						</p>
+						</p> -->
+   
 				</section>
           		<section class="rate">
 					<h2 class="visually-hidden">Предложения и тарифы</h2>
