--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,7 @@
     </header>
     <main class="page-main">
 		<div class="page-main__example">
-       <h2 class="page-main__name">Взгляните на жизнь<br> иначе</h2>
+       <h2 class="page-main__name">Взгляните на жизнь<br> иначе!</h2>
     		<a class="page-main__iphone">
     			<img class="page-main__iphone" src="img/iphone-5-in-hand-png.png" width="320" height="314"
     			alt="Фото айфона в руке">
