--- a/source/index.html
+++ b/source/index.html
@@ -62,7 +62,7 @@
        <h2 class="page-main__name">Взгляните на жизнь<br> иначе!</h2>
     		<a class="page-main__iphone">
     			<img class="page-main__iphone" src="img/iphone-5-in-hand-png.png" width="320" height="314"
-    			alt="Фото айфона в руке">
+    			alt="Фото айфона в руке"></a>
                                  
     		<button class="btn__iphone">Скачать приложение</button>
     		<section class="applications-page">
@@ -117,7 +117,7 @@
 				<section class="reviews">
 					<h2 class="visually-hidden">Отзывы о нас</h2>
 						<div class="reviews__wrapper">
-							<h2 class="reviews__title">Николай Петров</h2>
+							<!-- <h2 class="reviews__title"></h2> -->
       						<div class="reviews__list"> 
 								<blockquote class="reviews__item  slider__item">
 									<cite class="reviews__author-name">Николай Петров</cite>
