--- a/source/photo.html
+++ b/source/photo.html
@@ -11,17 +11,19 @@
 		<a class="page-header__logo">
       		<img class="page-header__logo-image" src="img/logotype-white-mobile-svg.svg" width="75" height="22" alt="Логотип «PINK»">
   		</a>
-  		<button class="btn-header__burger">
-			<svg xmlns="http://www.w3.org/2000/svg" width="49.945" height="24.007" version="1" viewBox="0 0 49.945 24.007">
+  		<!-- <button class="btn-header__burger"> -->
+			 <svg class="btn-header__burger-icon"  width="49px" height="24px"xmlns="http://www.w3.org/2000/svg" version="1" viewBox="0 0 49.945 24.007">
    		    <path fill="#FFF" d="M1.137 0C.51 0 0 .428 0 1.01v1.981c0 .558.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01V1.01c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.003c-.627 0-1.137.428-1.137 1.01v1.98c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.98c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.002C.51 20.005 0 20.434 0 21.016v1.981c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.981c0-.558-.494-1.011-1.138-1.011H1.137z"/>
             <path fill="#FFF" d="M1.137 0C.51 0 0 .428 0 1.01v1.981c0 .558.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01V1.01c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.003c-.627 0-1.137.428-1.137 1.01v1.98c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.98c0-.558-.494-1.01-1.138-1.01H1.137zm0 10.002C.51 20.005 0 20.434 0 21.016v1.981c0 .557.494 1.01 1.139 1.01H48.81c.628 0 1.138-.428 1.138-1.01v-1.981c0-.558-.494-1.011-1.138-1.011H1.137z"/>
-			</svg>
-		</button>
+			</svg> 
+		 <!-- </button>  -->
 			<section class="gallery-page gallery-page--all">
 				<div class="gallery-page gallery-page--users">
-					<img src="img/back-mobile-jpg.png" width="320" height="462" alt="Затемненное фото старинного замка">
-		 		</div>
-				<div class="gallery-page gallery-page--text">
+					<img class="first-photo" src="img/back-mobile-jpg.png" width="320" height="462" alt="Затемненное фото старинного замка"> -->
+				 </div>
+				 
+				 <img class="tablet-photo" src="img/back-tablet-1-x.png">
+				<div class="gallery-page--text">
 					<p class="gallery-page gallery-page__text--content">
 						Взгляните на фотографии, которые выкладывают пользователи!<br>
 						Видите, как не хватает ваших?
