--- a/source/photo.html
+++ b/source/photo.html
@@ -18,16 +18,14 @@
 			</svg> 
 		 <!-- </button>  -->
 			<section class="gallery-page gallery-page--all">
-				<div class="gallery-page gallery-page--users">
+				<!-- <div class="gallery-page gallery-page--users">
 					<img class="first-photo" src="img/back-mobile-jpg.png" width="320" height="462" alt="Затемненное фото старинного замка"> -->
-				 </div>
+				 </div> -->
 				 
 				 <img class="tablet-photo" src="img/back-tablet-1-x.png">
-				<div class="gallery-page--text">
-					<p class="gallery-page gallery-page__text--content">
+				<div class="gallery-page__text">
 						Взгляните на фотографии, которые выкладывают пользователи!<br>
 						Видите, как не хватает ваших?
-					</p>
 				</div>
 					<div class="gallery-page gallery-page--photo">
 						<span class="gallery-page gallery-page--name">Панорама дня</span>
